# Inverse-Kinematics-CMake

./: CMakeLists.txt  main.cpp
Animation/: BVH.cpp  BVH.h
Rendering/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Input.h
